2010-02-10  Ozkan Sezer  <sezeroz@gmail.com>

	* lib32/user32.def: Add CloseTouchInputHandle and GetTouchInputInfo as
	even more missing parts in revision 1530.
	* lib64/user32.def: Likewise.

2010-02-10  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/user32.def: Add IsTouchWindow, RegisterTouchWindow and
	UnregisterTouchWindow missing for support of revision 1530.
	* lib64/user32.def: Likewise.

2010-02-10  Ozkan Sezer  <sezeroz@gmail.com>

	A couple of lib32/*.def file fixes from mingw:
	* lib32/comctl32.def (StrCSpnA, StrCSpnIA, StrCSpnW, StrChrA, StrChrIA,
	StrChrIW, StrChrW, StrCmpNA, StrCmpNIA, StrCmpNIW, StrCmpNW, StrRChrA,
	StrRChrIA, StrRChrW, StrRStrIA, StrRStrIW, StrStrA, StrStrIA, StrStrIW,
	StrStrW, StrToIntA, StrToIntW): Removed erroneous exports which already
	are in shlwapi.def.
	* lib32/scsiport.def (ScsiPortGetDeviceBase): Fixed suffix.
	* lib32/ntoskrnl.def (MmAllocateContiguousMemory): Fixed suffix.
	* lib32/msimg32.def (GetDCBrushColor, GetDCPenColor): Moved from here...
	* lib32/gdi32.def (GetDCBrushColor, GetDCPenColor): ... to here.

2010-02-02  Ozkan Sezer  <sezeroz@gmail.com>

	* profile/gmon.c, profile/gmon.h, profile/mcount.c: Remove advertising
	clause of copyright. Closes our bug #2939623. For reference, see:
	ftp://ftp.cs.berkeley.edu/pub/4bsd/README.Impt.License.Change

2010-01-29  Kai Tietz  <kai.tietz@onevision.com>

	* Makefile.am: Add libmshtml.a and libmshtmled.a to build.
	* lib32/mshtml.def: New.
	* lib32/mshtmled.def: New.

2010-01-16  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/winusb.def: New.
	* lib64/winusb.def: New.
	* Makefile.am: Add both.

2010-01-15  Kai Tietz  <kai.tietz@onevision.com>
	Ozkan Sezer  <sezeroz@gmail.com>

	Change DISCLAIMER to DISCLAIMER.PD

2010-01-15  Philippe Dunski  <koala01@free.fr>

        * lib32/msvcrt.def (rand_s): New import symbol.
	* lib32/msvcr80.def (rand_s): Likewise.
	* lib64/msvcrt.def (rand_s): Likewise.
	* lib64/wmsvcrt.def (rand_s): Likewise.